# scripts

./: .gitignore  Cargo.toml  Makefile  README.md  bun.lockb  package-lock.json  package.json
.github/workflows/: CI.yml
app-tools/: editor-open  launch-fish-in-dir.fish  openscad-auto.fish  openscad-auto.rs  restart-qs
audio/: flacify  mp3ify  wavify
focus-modes/: gaming-mode-off.fish  gaming-mode-on.fish
git/: gclone  gclone.ts  git-abandon  git-distance  node_crunchule  node_crunchule.fish  rmbranch.fish  rmtag.fish  tagpush.fish  tagpush.ts  version.fish
maestral/: dbx-link  dbx-link.fish  dbx-web  dbx-web.fish
pack/: pack-logs  pack-pov
storage/: dmgify  dmgify.fish  generate-web-folder-index.ts  reveal-sd-card-backup-dcim.ts
sudo/: niceplz-sudo.fish  thermal-pressure.fish
system/: app-screenshot  app-screenshot.fish  config-touch-id-sudo  enable-touch-id-sudo  is-macos-screen-locked  map  niceplz.ts  pnice.fish  terminal-folder-for  toggle-retina  toggle-retina.fish  toggle-screen-sharing-resolution  toggle-screen-sharing-resolution.fish  touch-id-sudo-config.fish
video/: archive-h265-crf18  archive-h265-crf18-remote  archive-mp4-crf18.bash  hevc.ts  jxlify-folder.ts  mts2mov  timelapse.ts
web/: add-biome  add-biome.fish  add-rome  chrometab  npm-cost  npm-cost.fish  npm-roll  ts  ts.fish  weblocify
